# autovi_evaluation_code

./: .gitignore  README.md  STAGE2_PLAN.md  TICKETS.md  pyproject.toml  run_all_experiments.sh  run_experiments_parallel.py
docs/: MISSING_EXPERIMENTS.md  RESULTS_INSERTION_GUIDE.md  STAGE1_DOCUMENTATION_SUMMARY.md  Stage2_DP_Implementation_Plan.md  getting-started.md  index.md
docs/api/: README.md  data-module.md  evaluation-module.md  federated-module.md  model-module.md
docs/explanations/: data_module_explained.md  evaluation_module_explained.md  experiment_configs_explained.md  fairness_module_explained.md  federated_module_explained.md  models_module_explained.md  notebooks_explained.md  privacy_module_explained.md  project_assets_explained.md  robustness_module_explained.md
docs/phases/: README.md
docs/presentation/: README.md  Stage1_Presentation.tex  slides-outline.md  speaker-notes.md  stage2_presentation.md
docs/technical-report/: CODE_ARCHITECTURE_GUIDE.md  README.md  (+1 more)
notebooks/: 01_data_exploration.ipynb  01_data_exploration_executed.ipynb  02_baseline_training.ipynb  03_federated_experiments.ipynb  04_results_analysis.ipynb
results/: combined_results.json  comparison_analysis.json  comparison_table_fpr0.01.csv  comparison_table_fpr0.05.csv  comparison_table_fpr0.1.csv  comparison_table_fpr0.3.csv  comparison_table_fpr1.0.csv  statistical_analysis.json  summary_report.md  trade_off_summary.md  trade_off_table.csv
scripts/: generate_partitions.py  train_centralized.py  train_federated.py
src/: aggregation.py  image.py  metrics.py  util.py
(+91 files in other folders)
